Sun May  9 08:32:56 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/generator/generator.c (fbuffer_inc_capa):
	  fix tha use of REALLOC_N. [ruby-dev:41227]

Sun May  9 09:15:03 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/imap/test_imap.rb: use IPv4 for
	  test_imaps_post_connection_check.  [ruby-dev:41189]

Sun May  9 02:57:02 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/lib/fiddle.rb: only require DL if it hasn't been required
	  yet. [ruby-core:30095]

Sun May  9 09:30:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/{generator/generator.c,parser/parser.rl}: fixed indent.

	* ext/json/{generator,parser}/depend: added.

Sun May  9 05:44:59 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* include/ruby/ruby.h (rb_intern): fix compile error.

Sun May  9 02:37:33 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* io.c (nogvl_copy_stream_sendfile): mixed decls not allowed.

	* include/ruby/ruby.h (rb_intern): C90 needs nonempty macro
	  arguments.

Sun May  9 01:15:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (stackgrowdirection): removed duplicated code, use
	  STACK_UPPER macro instead.

	* gc.h (STACK_DIR_UPPER): moved from thread_pthread.c.

Sun May  9 00:35:56 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/dl/test_base.rb (libc_so, libm_so): supports solaris.

Sun May  9 00:27:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_aset): fixed argument type.

Sat May  8 19:03:31 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec (config): . is no longer in $:.

Sat May  8 13:48:31 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c (rb_ary_fetch, rb_ary_splice, rb_ary_store): Improve
	  IndexError messages [ruby-core:28394]

	* hash.c (rb_hash_fetch_m): Improve KeyError message

Sat May  8 11:07:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get